# meterec

./: .gitignore  AUTHORS  INSTALL  NEWS  README  TODO  conf.c  conf.h  disk.c  disk.h  display.c  display.h  index.html  keyboard.c  keyboard.h  meterec-init-conf  meterec-init-conf.1  meterec-pass-thru  meterec.1  meterec.c  meterec.h  playhead.c  playhead.c~  ports.c  ports.h  position.c  position.h  queue.c  queue.h  release  release.sh  session.c  session.h  test.c  test.mrec~
autotool/: Makefile.am  autotool.sh  configure.in  configure.in.idea
